[package]
name = "q_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.3"
